--- a/client/src/App.css
+++ b/client/src/App.css
@@ -77,7 +77,7 @@ button:enabled:hover, a:not(.overlay-container):hover, input[type="submit"]:hove
 }
 
 img[class="full-container"]{
-    max-width: 375px;
+    max-width: 405px;
 }
 
 .desktopnav{
@@ -256,7 +256,6 @@ img[class="full-container"]{
 
 .togglediv{
     position: absolute;
-    background-color: rgb(188, 188, 188);
     left: -1000px;
     z-index: 3;
     padding: 15px;
@@ -276,6 +275,17 @@ img[class="full-container"]{
 #allprojects{
     position: relative;
 }
+
+.colored.rounded{
+    background-color: rgb(94, 76, 110);
+    color: white;
+}
+
+.position-center.rounded{
+    padding: 35px;
+    max-height: 900px;
+}
+
 
 
 @media screen and (min-width: 1250px){
@@ -340,14 +350,12 @@ img[class="full-container"]{
         flex-direction: column;
     }
 
-    .grid-group.medium-grid{
+    .grid-group.medium-grid.scroll{
         display: flex;
         flex-direction: column;
-    }
-
-    .description{
-        max-height: 250px;
+        max-height: 700px;
         overflow-y: scroll;
     }
+
 
 }
