--- a/client/src/Colors.css
+++ b/client/src/Colors.css
@@ -1,10 +1,12 @@
 :root{
     --lightgray : rgb(181, 181, 181);
     --darkgray: rgb(104, 104, 104);
+    --transdarkgray: rgba(71, 71, 71, 0.511);
+    --translightgray: rgba(150, 150, 150, 0.539);
     --purple: rgb(91, 41, 120); 
 }
 
-.navcolor, .mediacolor{
+.purplediv{
     background-color: var(--purple);
     color: white;
 }
@@ -16,4 +18,12 @@
 .gray-box{
     background-color: var(--darkgray);
     color: black;
+}
+
+.transdarkgray{
+    background-color: var(--transdarkgray)
+}
+
+.translightgray{
+    background-color: var(--translightgray);
 }
